--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,1 +1,10 @@
-<a [routerLink]="['/main']">Start</a>
+<div class="container">
+    <div class="content">
+        <h1 class="heading">SpeakIt</h1>
+        <div class="text">
+            <p>Click on the words to hear them sound.</p>
+            <p>Click on the button and speak the words into the microphone</p>
+        </div>
+        <a [routerLink]="['/main']" class="btn start-btn">Start</a>
+    </div>
+</div>
