--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,4 +4,9 @@
     height: 100%;
     top: 0;
     left: 0;
+    &-container {
+        width: 85%;
+        height: 100%;
+        margin: 0 auto;
+    }
 }
