--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,12 @@ a {
     transition: .15s;
     box-shadow: 0 0 0 1px rgba(255,255,255,.1), 0 2px 4px 0 rgba(14,30,37,.12);
 }
+ul {
+    list-style: none;
+}
+
+img {
+    display: block;
+    height: 100%;
+    width: 100%;
+}
