--- a/src/app/main/components/level/level.component.scss
+++ b/src/app/main/components/level/level.component.scss
@@ -1,6 +1,6 @@
 .level {
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     &-list {
         position: relative;
         display: grid;
