--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,8 +21,18 @@ a, button {
     cursor: pointer;
 }
 
+button {
+    outline: none;
+    border: none;
+    background-color: transparent;
+}
+
 a {
     text-decoration: none;
+}
+
+input {
+    outline: none;
 }
 
 .btn {
@@ -33,6 +43,13 @@ a {
     border-radius: 4px;
     transition: .15s;
     box-shadow: 0 0 0 1px rgba(255,255,255,.1), 0 2px 4px 0 rgba(14,30,37,.12);
+    &:not(.btn__active):hover {
+        background-color: #00c2b2;
+    }
+    &__active {
+        background-color: #009179;
+
+    }
 }
 ul {
     list-style: none;
@@ -43,3 +60,4 @@ img {
     height: 100%;
     width: 100%;
 }
+
