--- a/src/app/main/components/form/form.component.scss
+++ b/src/app/main/components/form/form.component.scss
@@ -6,6 +6,7 @@
         margin-bottom: 10px;
         border-radius: 5px;
         box-shadow: 5px 5px 25px rgba(118,118,118,.25);
+        overflow: hidden;
     }
     &-control {
         display: block;
@@ -22,12 +23,14 @@
         color: rgba(14, 30, 37, .7);
         text-align: center;
         font-size: 22px;
-        background-image: url(/assets/images/microphone.svg);
-        background-repeat: no-repeat;
-        background-size: 20px;
-        background-position: 10px 15px;
-        &:focus {
-            outline-color: #009179;
+        &__allowed {
+            background-image: url(/assets/images/microphone.svg);
+            background-repeat: no-repeat;
+            background-size: 20px;
+            background-position: 10px 15px;
+            &:focus {
+                outline-color: #009179;
+            }
         }
     }
 }
